<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.xuanluan.myapplication.ui.home.HomeFragment"
        android:label="@string/frg_home"
        tools:layout="@layout/fragment_home" />

    <fragment android:id="@+id/nav_profile"
        android:name="com.xuanluan.myapplication.ui.profile.ProfileFragment"
        android:label="@string/frg_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment android:id="@+id/nav_category"
        android:name="com.xuanluan.myapplication.ui.category.CategoryFragment"
        android:label="@string/frg_category"
        tools:layout="@layout/fragment_category" />

    <fragment android:id="@+id/nav_add_product"
        android:name="com.xuanluan.myapplication.ui.profile.AddNewProduct"
        android:label="Thêm sách mới"
        tools:layout="@layout/fragment_add_product" />

</navigation>