<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/reg_img"
        android:layout_width="350dp"
        android:layout_height="230dp"
        android:src="@mipmap/bg_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_ten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/edt_background"
            android:drawableLeft="@drawable/icon_user"
            android:drawablePadding="12dp"
            android:elevation="3dp"
            android:hint="@string/edt_username"
            android:inputType="text"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_img"
            app:layout_constraintWidth_percent=".8" />

        <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edt_background"
        android:drawableLeft="@drawable/icon_account"
        android:drawablePadding="12dp"
        android:elevation="3dp"
        android:padding="12dp"
        android:hint="@string/edt_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_ten"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/edt_matkhau"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edt_background"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="12dp"
        android:elevation="3dp"
        android:padding="12dp"
        android:hint="@string/edt_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/edt_diachi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_background"
            android:drawableLeft="@drawable/icon_address"
            android:drawablePadding="12dp"
            android:elevation="3dp"
            android:padding="12dp"
            android:hint="Địa chỉ"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_matkhau"
            app:layout_constraintWidth_percent=".8" />

        <EditText
            android:id="@+id/edt_sdt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/edt_background"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="12dp"
            android:elevation="3dp"
            android:padding="12dp"
            android:maxLength="10"
            android:hint="Số điện thoại"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_diachi"
            app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/btn_dangky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button"
        android:text="@string/txt_signup"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_sdt" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dangky" />

    <TextView
        android:id="@+id/txt_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_signin"
        android:textColor="@color/teal_700"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/pgb_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scaleX=".5"
        android:scaleY=".5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>